Change file structure

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ backup/
 /compunits
 liblua.a
 **/*.res
-!bin/plugins/
-!bin/lib/
+!bin/plugins/**
+!bin/lib/*
 !bin/kbot6
 !bin/run.sh
 !bin/bot.cfg.example
