fixed string conversion in python vkapi func

--- a/kbot6.lpi
+++ b/kbot6.lpi
@@ -84,7 +84,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="lib/python4delphi;lib/lua53"/>
+      <OtherUnitFiles Value="lib/python4delphi"/>
       <UnitOutputDirectory Value="compunits/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Parsing>
