--- a/kbot6.lpi
+++ b/kbot6.lpi
@@ -17,7 +17,7 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <BuildNr Value="39"/>
+      <BuildNr Value="43"/>
       <Language Value="0419"/>
       <CharSet Value="04B0"/>
       <Attributes pvaPrivateBuild="True"/>
@@ -84,7 +84,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="lib/python4delphi;lib/flre"/>
+      <OtherUnitFiles Value="lib/python4lazarus;lib/flre"/>
       <UnitOutputDirectory Value="compunits/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Parsing>
@@ -104,7 +104,7 @@
       </Debugging>
       <Options>
         <PassLinkerOptions Value="True"/>
-        <LinkerOptions Value="-R ./"/>
+        <LinkerOptions Value="-R ./ -llua"/>
       </Options>
     </Linking>
   </CompilerOptions>
