--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ git:
   depth: 3
 before_install:
   - sudo apt-get -y install liblua5.3-0 python3.7
+  - ln -s /usr/lib/x86_64-linux-gnu/liblua5.3.so.0 /usr/lib/x86_64-linux-gnu/liblua5.3.so
 install: ./travis-lazarus/.travis.install.py
 script:
   - lazbuild $LAZ_OPT kbot6.lpi               # Build my_lazarus_test project
